Revert "[ndk][pndk] Add PNDK 64-bit support."
This reverts commit b6c0bb74a4f77b0aace74cf1dc88d4c3755661a4.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -42,7 +42,7 @@ ifeq ($(USE_INTEL_JITEVENTS), 1)
 endif
 
 ifeq ($(LLVM_CROSS_COMPILING),1)
-  PARALLEL_DIRS := llc ndk-translate
+  PARALLEL_DIRS := llc le32-none-ndk-translate
 endif
 
 # Let users override the set of tools to build from the command line.
